@@ -1,12 +1,12 @@
 package org.ddolib.examples.mcp;
 
 import org.ddolib.common.solver.SearchStatistics;
-import org.ddolib.modeling.DebugLevel;
 import org.ddolib.modeling.Model;
 import org.ddolib.modeling.Problem;
 import org.ddolib.modeling.Solvers;
 
 import java.io.IOException;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 
 public final class MCPAstarMain {
@@ -17,8 +17,8 @@ public final class MCPAstarMain {
      * @throws IOException
      */
     public static void main(String[] args) throws IOException {
-        final String filename = Paths.get("data", "MCP", "mcp_4.txt").toString();
-        final MCPProblem problem = new MCPProblem(filename);
+        final String instance = args.length == 0 ? Path.of("data", "MCP", "mcp_5_2.txt").toString() : args[0];
+        final MCPProblem problem = new MCPProblem(instance);
         Model<MCPState> model = new Model<MCPState>() {
 
             @Override
@@ -30,16 +30,9 @@ public final class MCPAstarMain {
             public MCPFastLowerBound lowerBound() {
                 return new MCPFastLowerBound(problem);
             }
-
-            @Override
-            public DebugLevel debugMode() {
-                return DebugLevel.ON;
-            }
         };
 
-        Solvers<MCPState> solver = new Solvers<>();
-
-        SearchStatistics stats = solver.minimizeAstar(model);
+        SearchStatistics stats = Solvers.minimizeAstar(model);
 
         System.out.println(stats);
 
