@@ -8,6 +8,7 @@ import org.ddolib.modeling.Problem;
 import org.ddolib.modeling.Solvers;
 
 import java.io.IOException;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.BitSet;
 
@@ -16,8 +17,8 @@ public final class MispAcsMain {
      * ***** The Maximum Independent Set Problem (MISP) *****
      */
     public static void main(String[] args) throws IOException {
-        final String file = Paths.get("data", "MISP", "tadpole_4_2.dot").toString();
-        final MispProblem problem = new MispProblem(file);
+        final String instance = args.length == 0 ? Path.of("data", "MISP", "tadpole_4_2.dot").toString() : args[0];
+        final MispProblem problem = new MispProblem(instance);
         AcsModel<BitSet> model = new AcsModel<>() {
             @Override
             public Problem<BitSet> problem() {
@@ -35,9 +36,7 @@ public final class MispAcsMain {
             }
         };
 
-        Solvers<BitSet> solver = new Solvers<>();
-
-        SearchStatistics stats = solver.minimizeAcs(model);
+        SearchStatistics stats = Solvers.minimizeAcs(model);
 
         System.out.println(stats);
     }
