@@ -8,6 +8,7 @@ import org.ddolib.modeling.Problem;
 import org.ddolib.modeling.Solvers;
 
 import java.io.IOException;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 
 /**
@@ -26,9 +27,8 @@ public class TSPTWAstarMain {
      * <a href="https://lopez-ibanez.eu/tsptw-instances#makespan">López-Ibáñes and Blum benchmark instances</a>.
      */
     public static void main(String[] args) throws IOException {
-
-        final String file = Paths.get("data", "TSPTW", "AFG", "rbg010a.tw").toString();
-        final TSPTWProblem problem = new TSPTWProblem(file);
+        final String instance = args.length == 0 ? Path.of("data", "TSPTW", "AFG", "rbg010a.tw").toString() : args[0];
+        final TSPTWProblem problem = new TSPTWProblem(instance);
         Model<TSPTWState> model = new Model<>() {
             @Override
             public Problem<TSPTWState> problem() {
@@ -46,9 +46,7 @@ public class TSPTWAstarMain {
             }
         };
 
-        Solvers<TSPTWState> solver = new Solvers<>();
-
-        SearchStatistics stats = solver.minimizeAstar(model);
+        SearchStatistics stats = Solvers.minimizeAstar(model);
 
         System.out.println(stats);
     }
